--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="cols">
                 <div class="box">
-                    <img src="/img/About.jpg" alt="img">
+                    <img src="img/About.jpg" alt="img">
                 </div>
             </div>
         </div>
@@ -62,42 +62,42 @@
         <div class="content">
             <div class="frame">
                 <div class="box">
-                    <img src="/img/workout1.jpg" alt="">
+                    <img src="img/workout1.jpg" alt="">
                 </div>
                 <div class="title">someone famous</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="frame">
                 <div class="box">
-                    <img src="/img/workout2.jpg" alt="">
+                    <img src="img/workout2.jpg" alt="">
                 </div>
                 <div class "title">someone famous</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="frame">
                 <div class="box">
-                    <img src="/img/workout3.jpg" alt="">
+                    <img src="img/workout3.jpg" alt="">
                 </div>
                 <div class="title">someone famous</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="frame">
                 <div class="box">
-                    <img src="/img/workout4.jpg" alt="">
+                    <img src="img/workout4.jpg" alt="">
                 </div>
                 <div class="title">someone famous</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="frame">
                 <div class="box">
-                    <img src="/img/workout5.jpg" alt="">
+                    <img src="img/workout5.jpg" alt="">
                 </div>
                 <div class="title">someone famous</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="frame">
                 <div class="box">
-                    <img src="/img/workout6.jpg" alt="">
+                    <img src="img/workout6.jpg" alt="">
                 </div>
                 <div class="title">someone famous</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -113,7 +113,7 @@
     <div class="content">
         <div class="frame">
             <div class="box">
-                <img src="/img/trainer1.jpg" alt="">
+                <img src="img/trainer1.jpg" alt="">
             </div>
             <div class="headline">
                 <div class="title">someone famous</div>
@@ -129,7 +129,7 @@
 
         <div class="frame">
             <div class="box">
-                <img src="/img/trainer2.jpg" alt="">
+                <img src="img/trainer2.jpg" alt="">
             </div>
             <div class="headline">
                 <div class="title">someone famous</div>
@@ -145,7 +145,7 @@
 
         <div class="frame">
             <div class="box">
-                <img src="/img/trainer3.jpg" alt="">
+                <img src="img/trainer3.jpg" alt="">
             </div>
             <div class="headline">
                 <div class="title">someone famous</div>
@@ -161,7 +161,7 @@
 
         <div class="frame">
             <div class="box">
-                <img src="/img/trainer4.jpg" alt="">
+                <img src="img/trainer4.jpg" alt="">
             </div>
             <div class="headline">
                 <div class="title">someone famous</div>
@@ -203,7 +203,7 @@
             </form>
         </div>
         <div class="join-image">
-            <img src="/img/alonso-reyes-0HlI76m4jxU-unsplash.jpg" alt="Join Us Image">
+            <img src="img/alonso-reyes-0HlI76m4jxU-unsplash.jpg" alt="Join Us Image">
         </div>
     </div>
 </section>
